@@ -16,7 +16,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
@@ -24,20 +23,7 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableWebMvc
 public class WebSecurityConfig implements WebMvcConfigurer {
-
-
-//    @Override
-//    protected void configure(HttpSecurity http) throws Exception {
-////        http.authorizeRequests().anyRequest().permitAll();
-////        http.cors().and().csrf().disable();
-//        http.cors()
-//                .and().csrf().disable()
-//                .authorizeRequests()
-//                .anyRequest().access("isAuthenticated() or hasIpAddress('127.0.0.1/24') or hasIpAddress('::1')")
-//                .and().httpBasic().and().headers().referrerPolicy(ReferrerPolicyHeaderWriter.ReferrerPolicy.ORIGIN);
-//    }
 
 
     // THis also can be used
@@ -54,7 +40,9 @@ public class WebSecurityConfig implements WebMvcConfigurer {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         // For now permit all requests (development convenience). Revert before production.
-        http.csrf(AbstractHttpConfigurer::disable)
+        // Enable CORS support in the security filter chain so preflight requests are handled
+        http.cors(Customizer.withDefaults())
+                .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth.anyRequest().permitAll())
                 // Keep httpBasic disabled for now since all is permitted
                 .sessionManagement(httpSecuritySessionManagementConfigurer -> httpSecuritySessionManagementConfigurer.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
@@ -65,28 +53,21 @@ public class WebSecurityConfig implements WebMvcConfigurer {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-//        //configuration.setAllowedMethods(Arrays.asList("*"));
-//       // configuration.setAllowedHeaders(Arrays.asList("*"));
-//       // configuration.setAllowCredentials(true);
-//
-//
-//
-//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-//        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-//       // configuration.setExposedHeaders(Arrays.asList("x-auth-token"));
-//       // configuration.setAllowCredentials(true);
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-        configuration.addAllowedOriginPattern(CorsConfiguration.ALL);
-        configuration.setAllowedMethods(List.of(CorsConfiguration.ALL));
-       // configuration.addAllowedHeader();
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token","Access-Control-Allow-Origin"));
+        // allow any origin (use patterns to support credentials); adjust in production
+        configuration.addAllowedOriginPattern("*");
+        // Explicit allowed methods (include OPTIONS for preflight)
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        // Accept common headers including those used by browsers during preflight
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+        // Allow credentials if needed by the frontend
+        configuration.setAllowCredentials(true);
+        // Expose headers back to the client
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Auth-Token"));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
 
     @Override
     public void addCorsMappings(CorsRegistry registry) {
